@startuml
'https://plantuml.com/class-diagram

 abstract class AbstractEnemyAircraft
 {
    # direction:int
    - abstractPropFactory:AbstractPropFactory
    + AbstractEnemyAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + AbstractEnemyAircraft(int locationX, int locationY, int speedX, int speedY, int hp, int shootNum, int power, ShootStrategyInterface shootStrategy)
    + forward():void
    + generateProp():AbstractProp
 }

abstract class AbstractEnemyAircraftFactory
{
    + {abstract} createEnemyAircraft(int hp, int speedY):AbstractEnemyAircraft
}

AbstractEnemyAircraft <|.. AbstractEnemyAircraftFactory
MobEnemy <|.. MobEnemyFactory
BossEnemy <|.. BossEnemyFactory
EliteEnemy <|.. EliteEnemyFactory

AbstractEnemyAircraft <|-- MobEnemy
AbstractEnemyAircraft <|-up- BossEnemy
AbstractEnemyAircraft <|-up- EliteEnemy

AbstractEnemyAircraftFactory <|-- BossEnemyFactory
AbstractEnemyAircraftFactory <|-- EliteEnemyFactory
AbstractEnemyAircraftFactory <|-- MobEnemyFactory

class BossEnemy {
    - shootNum:int
    - power:int
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int shootNum, int power, ShootStrategyInterface shootStrategy)
    + forward():void
    + shoot():List<BaseBullet>
}

class EliteEnemy {
    - shootNum:int
    - power:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int shootNum, int power, ShootStrategyInterface shootStrategy)
    + shoot():List<BaseBullet>
    + generateProp():AbstractProp
}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
    + generateProp():AbstractProp
    + update():void
}

class BossEnemyFactory {
    + createEnemyAircraft(int hp, int speedY):AbstractEnemyAircraft
}

class EliteEnemyFactory {
    + createEnemyAircraft(int hp, int speedY):AbstractEnemyAircraft
}

class MobEnemyFactory {
    + createEnemyAircraft(int hp, int speedY):AbstractEnemyAircraft
}

@enduml